# BML Examples Build Configuration
# 
# These examples demonstrate v0.4+ mod development patterns.
# See templates/ directory for mod project templates.

# EventLogger - v0.4+ module example with IMC event subscription
add_subdirectory(EventLogger)

# MinimalMod - Minimal v0.4+ module example
add_subdirectory(MinimalMod)
